Redundant dependency was deleted, Spring action class was formatted, logs into SprintActioner were added